tests/baselines/reference/parserGreaterThanTokenAmbiguity17.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity17.ts (1 errors) ====
    1 >>> = 2;
          ~
!!! parserGreaterThanTokenAmbiguity17.ts(1,7): error TS1003: Identifier expected.